--- a/Checkout.html
+++ b/Checkout.html
@@ -5,13 +5,13 @@
 </HEAD>
 <BODY BGCOLOR="#FDF5E6">
 <H1 ALIGN="CENTER">Checking Out</H1>
-Ozur dileriz, online islemlerimiz su an arizali lutfen adrese cek ile odeme yapiniz. 
-
+Ozur dileriz, ancak elektronik kredi karti islemlerimiz su anda calismiyor. Lutfen bir cek gonderin:
+ 
 <PRE>
-Beyza Irem Albayrak  
-Albayrak Yatirim
-Metrokent mahallesi, no:326
-Basaksehir, Istanbul 34034
+Ahmet Akdeniz   
+Maxx Yatirim
+Guzelyali mahallesi, no:3046
+Atakum, Samsun 55050
 </PRE>
 Kargo ucretlerini henuz hesaplamadigimiz icin lutfen ceki imzalayin ancak miktari doldurmayin. Bu islemi biz yapacagiz.         
 </BODY></HTML>
